# sdkwork-memory

./: .env.example  .env.postgres.example  .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json
crates/sdkwork-api-memory-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-memory-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-memory-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-intelligence-memory-repository-sqlx/: Cargo.toml
crates/sdkwork-intelligence-memory-repository-sqlx/specs/: component.spec.json
crates/sdkwork-intelligence-memory-repository-sqlx/src/: bootstrap.rs  db.rs  lib.rs  runtime.rs
crates/sdkwork-intelligence-memory-repository-sqlx/tests/: runtime_bootstrap.rs
crates/sdkwork-intelligence-memory-service/: Cargo.toml
crates/sdkwork-intelligence-memory-service/specs/: README.md  component.spec.json
crates/sdkwork-intelligence-memory-service/src/: access.rs  app_backend_api.rs  backend_admin_api.rs  candidate_promotion.rs  commercial_api.rs  domain_metrics.rs  endpoint_validation.rs  implementation_migration.rs  job_worker.rs  lib.rs  open_api.rs  outbox_delivery.rs  outbox_publisher.rs  platform.rs  retrieval_profile.rs  runtime_data_plane.rs  sensitive_content.rs  store_error.rs  tenant_quota.rs
crates/sdkwork-intelligence-memory-service/tests/: retrieval_workflow_contract.rs  runtime_data_plane_contract.rs  runtime_profile_contract.rs
crates/sdkwork-memory-api-server/: Cargo.toml
crates/sdkwork-memory-api-server/specs/: component.spec.json
crates/sdkwork-memory-api-server/src/: bootstrap.rs  lib.rs  main.rs  observability.rs  readiness.rs
crates/sdkwork-memory-database-host/: Cargo.toml
crates/sdkwork-memory-database-host/specs/: component.spec.json
crates/sdkwork-memory-database-host/src/: lib.rs
crates/sdkwork-memory-database-host/tests/: postgres_lifecycle.rs  sqlite_lifecycle.rs
crates/sdkwork-memory-drive/: Cargo.toml
crates/sdkwork-memory-drive/src/: bootstrap.rs  lib.rs  object_store.rs  uploader.rs
crates/sdkwork-memory-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-memory-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-memory-integration-tests/: Cargo.toml
crates/sdkwork-memory-integration-tests/tests/: api_server_smoke_test.rs  app_api_mvp_flow.rs  app_backend_api_smoke_test.rs  backend_api_admin_flow.rs  backend_commercial_management_flow.rs  governance_and_audit_flow.rs  memory_no_embedding_mvp_test.rs  open_api_smoke_test.rs  sensitivity_read_path_test.rs  space_isolation_flow.rs  space_isolation_security_test.rs
crates/sdkwork-memory-profile-resolver/: Cargo.toml
crates/sdkwork-memory-profile-resolver/specs/: README.md  component.spec.json
crates/sdkwork-memory-profile-resolver/src/: lib.rs  profile.rs
crates/sdkwork-memory-profile-resolver/tests/: executable_profile_contract.rs  profile_resolution_contract.rs
crates/sdkwork-memory-retrieval/: Cargo.toml
crates/sdkwork-memory-retrieval/specs/: README.md  component.spec.json
crates/sdkwork-memory-retrieval/src/: context_pack.rs  lib.rs
crates/sdkwork-memory-retrieval/tests/: context_pack.rs  no_embedding_retrieval.rs
crates/sdkwork-memory-standalone-gateway/: Cargo.toml
crates/sdkwork-memory-standalone-gateway/specs/: component.spec.json
crates/sdkwork-memory-standalone-gateway/src/: bootstrap.rs  main.rs  observability.rs
crates/sdkwork-memory-test-support/: Cargo.toml
crates/sdkwork-memory-test-support/src/: api_envelope.rs  drive_export.rs  lib.rs  space_fixtures.rs  web_auth.rs
crates/sdkwork-memory-test-support/tests/: conformance_harness_contract.rs  web_auth_contract.rs
crates/sdkwork-router-memory-common/: Cargo.toml
crates/sdkwork-router-memory-common/specs/: component.spec.json
crates/sdkwork-router-memory-common/src/: correlation.rs  lib.rs  problem.rs  readiness.rs
crates/sdkwork-router-memory-open-api/: Cargo.toml  README.md
crates/sdkwork-router-memory-open-api/specs/: component.spec.json
crates/sdkwork-router-memory-open-api/src/: error.rs  http_route_manifest.rs  lib.rs  manifest.rs  paths.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-router-memory-open-api/tests/: open_api_mvp_flow.rs  open_api_routes.rs  open_openapi_routes.rs  open_web_framework_routes.rs  route_manifest_contract.rs
crates/sdkwork-routes-memory-app-api/: Cargo.toml  README.md
crates/sdkwork-routes-memory-app-api/specs/: component.spec.json
crates/sdkwork-routes-memory-app-api/src/: commercial_routes.rs  error.rs  http_route_manifest.rs  lib.rs  manifest.rs  paths.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-routes-memory-app-api/tests/: app_api_routes.rs  app_openapi_routes.rs  app_web_framework_routes.rs  route_manifest_contract.rs
crates/sdkwork-routes-memory-support/: Cargo.toml
crates/sdkwork-routes-memory-support/specs/: component.spec.json
crates/sdkwork-routes-memory-support/src/: correlation.rs  lib.rs  metrics.rs  principal.rs  problem.rs  query.rs  readiness.rs  response.rs  web_runtime.rs
plugins/sdkwork-memory-plugin-native-sql/: Cargo.toml  README.md  sdkwork.memory.plugin.json
plugins/sdkwork-memory-plugin-native-sql/specs/: README.md  component.spec.json
plugins/sdkwork-memory-plugin-native-sql/src/: admin_tables.rs  canonical_data.rs  commercial_store.rs  consolidation.rs  governance_access.rs  graph_store.rs  learning_jobs.rs  lib.rs  manifest.rs  native_sql_phase1_runtime.rs  policy_store.rs  pool_backend.rs  privacy.rs  readiness_store.rs  search_index.rs  space_data.rs  sqlx_compat.rs  store.rs
plugins/sdkwork-memory-plugin-native-sql/tests/: candidate_listing_contract.rs  executable_runtime_contract.rs  governance_access_contract.rs  manifest_matches_json.rs  postgres_store_contract.rs  sqlite_store_contract.rs
plugins/sdkwork-memory-plugin-reference-profiles/: Cargo.toml  README.md  sdkwork.memory.plugin.json
plugins/sdkwork-memory-plugin-reference-profiles/specs/: README.md  component.spec.json
(+393 files in other folders)
