[workspace]
resolver = "2"
members = [
  "crates/sdkwork-memory-database-host",
  "crates/sdkwork-router-memory-common",
  "crates/sdkwork-memory-spi",
  "crates/sdkwork-memory-runtime",
  "crates/sdkwork-memory-contract",
  "crates/sdkwork-memory-core",
  "crates/sdkwork-memory-test-support",
  "crates/sdkwork-intelligence-memory-service",
  "crates/sdkwork-intelligence-memory-repository-sqlx",
  "crates/sdkwork-router-memory-open-api",
  "crates/sdkwork-router-memory-app-api",
  "crates/sdkwork-router-memory-backend-api",
  "crates/sdkwork-memory-integration-tests",
  "crates/sdkwork-memory-api-server",
  "plugins/sdkwork-memory-plugin-native-sql",
  "plugins/sdkwork-memory-plugin-reference-profiles",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
http = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "any", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sdkwork-memory-database-host = { path = "crates/sdkwork-memory-database-host" }
sdkwork-memory-spi = { path = "crates/sdkwork-memory-spi" }
sdkwork-memory-runtime = { path = "crates/sdkwork-memory-runtime" }
sdkwork-memory-contract = { path = "crates/sdkwork-memory-contract" }
sdkwork-memory-core = { path = "crates/sdkwork-memory-core" }
sdkwork-memory-test-support = { path = "crates/sdkwork-memory-test-support" }
sdkwork-memory-plugin-native-sql = { path = "plugins/sdkwork-memory-plugin-native-sql" }
sdkwork-intelligence-memory-service = { path = "crates/sdkwork-intelligence-memory-service" }
sdkwork-intelligence-memory-repository-sqlx = { path = "crates/sdkwork-intelligence-memory-repository-sqlx" }
sdkwork-router-memory-open-api = { path = "crates/sdkwork-router-memory-open-api" }
sdkwork-router-memory-common = { path = "crates/sdkwork-router-memory-common" }
sdkwork-router-memory-app-api = { path = "crates/sdkwork-router-memory-app-api" }
sdkwork-router-memory-backend-api = { path = "crates/sdkwork-router-memory-backend-api" }
sdkwork-memory-api-server = { path = "crates/sdkwork-memory-api-server" }

sdkwork-iam-web-adapter = { path = "../sdkwork-appbase/crates/sdkwork-iam-web-adapter" }
sdkwork-router-iam-app-api = { path = "../sdkwork-appbase/crates/sdkwork-router-iam-app-api" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork-database-repository = { path = "../sdkwork-database/crates/sdkwork-database-repository", package = "sdkwork-database-repository" }
sdkwork_database_config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork_database_lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork_database_spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork_database_sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork-id-core = { path = "../sdkwork-id/crates/sdkwork-id-core" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
