[workspace]
resolver = "2"
members = [
    "crates/sdkwork-api-memory-assembly",
    "crates/sdkwork-api-memory-assembly",
  "crates/sdkwork-memory-database-host",
  "crates/sdkwork-memory-drive",
  "crates/sdkwork-routes-memory-support",
  "crates/sdkwork-memory-spi",
  "crates/sdkwork-memory-profile-resolver",
  "crates/sdkwork-memory-contract",
  "crates/sdkwork-memory-retrieval",
  "crates/sdkwork-memory-test-support",
  "crates/sdkwork-intelligence-memory-service",
  "crates/sdkwork-intelligence-memory-repository-sqlx",
  "crates/sdkwork-routes-memory-open-api",
  "crates/sdkwork-routes-memory-app-api",
  "crates/sdkwork-routes-memory-backend-api",
  "crates/sdkwork-memory-integration-tests",
  "crates/sdkwork-api-memory-standalone-gateway",
  "plugins/sdkwork-memory-plugin-native-sql",
  "plugins/sdkwork-memory-plugin-reference-profiles",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
sdkwork-drive-workspace-service = { path = "../sdkwork-drive/crates/sdkwork-drive-workspace-service" }
sdkwork-drive-uploader-service = { path = "../sdkwork-drive/crates/sdkwork-drive-uploader-service" }
sdkwork-drive-storage-s3 = { path = "../sdkwork-drive/crates/sdkwork-drive-storage-s3" }
sdkwork-drive-storage-local = { path = "../sdkwork-drive/crates/sdkwork-drive-storage-local" }
sdkwork-drive-storage-contract = { path = "../sdkwork-drive/crates/sdkwork-drive-storage-contract" }
sdkwork-drive-config = { path = "../sdkwork-drive/crates/sdkwork-drive-config" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
async-trait = "0.1"
axum = "0.8"
http = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "any", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util", "limit"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
rand = "0.8"

sdkwork-memory-database-host = { path = "crates/sdkwork-memory-database-host" }
sdkwork-memory-drive = { path = "crates/sdkwork-memory-drive" }
sdkwork-api-memory-assembly = { path = "crates/sdkwork-api-memory-assembly" }
sdkwork-memory-spi = { path = "crates/sdkwork-memory-spi" }
sdkwork-memory-profile-resolver = { path = "crates/sdkwork-memory-profile-resolver" }
sdkwork-memory-contract = { path = "crates/sdkwork-memory-contract" }
sdkwork-memory-retrieval = { path = "crates/sdkwork-memory-retrieval" }
sdkwork-memory-test-support = { path = "crates/sdkwork-memory-test-support" }
sdkwork-memory-plugin-native-sql = { path = "plugins/sdkwork-memory-plugin-native-sql" }
sdkwork-memory-plugin-reference-profiles = { path = "plugins/sdkwork-memory-plugin-reference-profiles" }
sdkwork-intelligence-memory-service = { path = "crates/sdkwork-intelligence-memory-service" }
sdkwork-intelligence-memory-repository-sqlx = { path = "crates/sdkwork-intelligence-memory-repository-sqlx" }
sdkwork-routes-memory-open-api = { path = "crates/sdkwork-routes-memory-open-api" }
sdkwork-routes-memory-support = { path = "crates/sdkwork-routes-memory-support" }
sdkwork-routes-memory-app-api = { path = "crates/sdkwork-routes-memory-app-api" }
sdkwork-routes-memory-backend-api = { path = "crates/sdkwork-routes-memory-backend-api" }
sdkwork-api-memory-standalone-gateway = { path = "crates/sdkwork-api-memory-standalone-gateway" }

sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-routes-iam-app-api = { path = "../sdkwork-iam/crates/sdkwork-routes-iam-app-api" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap", features = ["redis"] }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork-database-repository = { path = "../sdkwork-database/crates/sdkwork-database-repository", package = "sdkwork-database-repository" }
sdkwork-id-core = { path = "../sdkwork-id/crates/sdkwork-id-core" }
sdkwork-database-id = { path = "../sdkwork-database/crates/sdkwork-database-id", package = "sdkwork-database-id" }
