[package]
name = "sdkwork-intelligence-memory-repository-sqlx"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate"] }
thiserror.workspace = true
tracing.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-memory-database-host.workspace = true
sdkwork-memory-plugin-native-sql.workspace = true

[dev-dependencies]
tokio.workspace = true
