[package]
name = "sdkwork-intelligence-memory-service"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sdkwork-memory-spi.workspace = true
sdkwork-memory-contract.workspace = true
sdkwork-memory-core.workspace = true
sdkwork-memory-plugin-native-sql.workspace = true
sdkwork-id-core.workspace = true
sdkwork-utils-rust.workspace = true

[dev-dependencies]
tokio.workspace = true
