[package]
name = "sdkwork-memory-api-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sdkwork-memory-api-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sdkwork-router-memory-open-api.workspace = true
sdkwork-router-memory-app-api.workspace = true
sdkwork-router-memory-backend-api.workspace = true
sdkwork-intelligence-memory-repository-sqlx.workspace = true
sdkwork-intelligence-memory-service.workspace = true
