[package]
name = "sdkwork-memory-api-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sdkwork-memory-api-server"
path = "src/main.rs"

[features]
default = []
otel = [
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
]

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "registry"] }
sdkwork-router-memory-open-api.workspace = true
sdkwork-router-memory-app-api.workspace = true
sdkwork-router-memory-backend-api.workspace = true
sdkwork-router-memory-common.workspace = true
sdkwork-intelligence-memory-repository-sqlx.workspace = true
sdkwork-intelligence-memory-service.workspace = true
sdkwork-memory-database-host.workspace = true
tracing-opentelemetry = { version = "0.28", optional = true }
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client"], optional = true }
