[package]
name = "sdkwork-memory-drive"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-drive-config = { workspace = true }
sdkwork-drive-storage-contract = { workspace = true }
sdkwork-drive-storage-local = { workspace = true }
sdkwork-drive-storage-s3 = { workspace = true }
sdkwork-drive-uploader-service = { workspace = true }
sdkwork-drive-workspace-service = { workspace = true }
sdkwork-memory-spi.workspace = true
sdkwork-utils-rust.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "any"] }
tracing.workspace = true
