[package]
name = "sdkwork-memory-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-memory application HTTP plane."

[lib]
name = "sdkwork_memory_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-intelligence-memory-service.workspace = true
sdkwork-routes-memory-app-api.workspace = true
sdkwork-routes-memory-backend-api.workspace = true
sdkwork-routes-memory-open-api.workspace = true
sdkwork-routes-memory-support.workspace = true
