[package]
name = "sdkwork-memory-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
axum.workspace = true
http.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-intelligence-memory-service.workspace = true
sdkwork-memory-contract.workspace = true
sdkwork-memory-plugin-native-sql.workspace = true
sdkwork-memory-spi.workspace = true
sdkwork-routes-memory-app-api.workspace = true
sdkwork-routes-memory-open-api.workspace = true
sdkwork-routes-memory-backend-api.workspace = true
sdkwork-web-core.workspace = true
sdkwork-memory-standalone-gateway = { path = "../sdkwork-memory-standalone-gateway" }
sdkwork-memory-test-support.workspace = true
