[package]
name = "sdkwork-memory-profile-resolver"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
sdkwork-memory-spi.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
async-trait.workspace = true
tokio.workspace = true
