[package]
name = "sdkwork-memory-test-support"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
sdkwork-memory-contract = { path = "../sdkwork-memory-contract" }
sdkwork-memory-spi = { path = "../sdkwork-memory-spi" }
sdkwork-web-core.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
