[package]
name = "sdkwork-memory-test-support"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
sdkwork-memory-contract.workspace = true
sdkwork-memory-spi.workspace = true
sdkwork-intelligence-memory-service.workspace = true
sdkwork-memory-plugin-native-sql.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-core.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
