[package]
name = "sdkwork-router-memory-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-memory-contract.workspace = true
sdkwork-web-core.workspace = true

[dev-dependencies]
tokio.workspace = true
