[package]
name = "sdkwork-router-memory-open-api"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-memory-contract.workspace = true
sdkwork-router-memory-common.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-web-core.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
sdkwork-intelligence-memory-service.workspace = true
sdkwork-memory-plugin-native-sql.workspace = true
