[package]
name = "sdkwork-memory-plugin-native-sql"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
sdkwork-memory-spi = { path = "../../crates/sdkwork-memory-spi" }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
