[package]
name = "sdkwork-memory-plugin-native-sql"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
sdkwork-memory-spi.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-id.workspace = true
sdkwork-database-sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-utils-rust.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
