[package]
name = "sdkwork-memory-plugin-reference-profiles"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
sdkwork-memory-spi = { path = "../../crates/sdkwork-memory-spi" }

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
