[package]
name = "sdkwork-memory-plugin-reference-profiles"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-memory-spi.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
